@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -142,7 +142,7 @@ public class PortedScannerTests extends PreprocessorTestsBase {
 		}
 
 		public int symbolValue(int index) {
-			return new Long(Math.round(Math.pow(index, index))).intValue();
+			return Long.valueOf(Math.round(Math.pow(index, index))).intValue();
 		}
 
 		public String generateCode() {
@@ -190,7 +190,7 @@ public class PortedScannerTests extends PreprocessorTestsBase {
 
 		public TruthTable(int n) {
 			numberOfVariables = n;
-			numberOfRows = new Long(Math.round(Math.pow(2, n))).intValue();
+			numberOfRows = Long.valueOf(Math.round(Math.pow(2, n))).intValue();
 
 			rows = new TableRow[numberOfRows];
 			for (int i = 0; i < numberOfRows; ++i) {
