@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2002, 2013 IBM Corporation and others.
+ * Copyright (c) 2002, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -205,7 +205,7 @@ public class Util implements ICLogConstants {
 			// Time stamp
 			if (addTimeStamp)
 				message = MessageFormat.format("[{0}] {1}", new Object[]{ //$NON-NLS-1$
-						new Long(System.currentTimeMillis()), message}); 
+						Long.valueOf(System.currentTimeMillis()), message}); 
 			while (message.length() > 100) {
 				String partial = message.substring(0, 100);
 				message = message.substring(100);
