@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2011 IBM Corporation and others.
+ * Copyright (c) 2004, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -79,6 +79,6 @@ public class ScannerContext {
 	 * @param undo The undo to set
 	 */
 	public void pushUndo(int undo) {
-		this.fUndo.push(new Integer(undo));
+		this.fUndo.push(Integer.valueOf(undo));
 	}
 }
