@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 QNX Software Systems and others.
+ * Copyright (c) 2000, 2016 QNX Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -89,12 +89,12 @@ public class Dwarf {
 		byte offsetSize;
 		@Override
 		public String toString() {
-			StringBuffer sb = new StringBuffer();
-			sb.append("Length: " + length).append("\n"); //$NON-NLS-1$ //$NON-NLS-2$
-			sb.append("Version: " + version).append("\n"); //$NON-NLS-1$ //$NON-NLS-2$
-			sb.append("Abbreviation: " + abbreviationOffset).append("\n"); //$NON-NLS-1$ //$NON-NLS-2$
-			sb.append("Address size: " + addressSize).append("\n"); //$NON-NLS-1$ //$NON-NLS-2$
-			sb.append("Offset size: " + offsetSize).append("\n"); //$NON-NLS-1$ //$NON-NLS-2$
+			StringBuilder sb = new StringBuilder();
+			sb.append("Length: ").append(length).append('\n'); //$NON-NLS-1$
+			sb.append("Version: ").append(version).append('\n'); //$NON-NLS-1$
+			sb.append("Abbreviation: ").append(abbreviationOffset).append('\n'); //$NON-NLS-1$
+			sb.append("Address size: ").append(addressSize).append('\n'); //$NON-NLS-1$
+			sb.append("Offset size: ").append(offsetSize).append('\n'); //$NON-NLS-1$
 			return sb.toString();
 		}
 	}
@@ -125,9 +125,9 @@ public class Dwarf {
 		}
 		@Override
 		public String toString() {
-			StringBuffer sb = new StringBuffer();
-			sb.append("name: " + Long.toHexString(name)); //$NON-NLS-1$
-			sb.append(" value: " + Long.toHexString(form)); //$NON-NLS-1$
+			StringBuilder sb = new StringBuilder();
+			sb.append("name: ").append(Long.toHexString(name)); //$NON-NLS-1$
+			sb.append(" value: ").append(Long.toHexString(form)); //$NON-NLS-1$
 			return sb.toString();
 		}
 	}
@@ -141,7 +141,7 @@ public class Dwarf {
 		}
 		@Override
 		public String toString() {
-			StringBuffer sb = new StringBuffer();
+			StringBuilder sb = new StringBuilder();
 			sb.append(attribute.toString()).append(' ');
 			if (value != null) {
 				Class<? extends Object> clazz = value.getClass();
@@ -566,7 +566,7 @@ public class Dwarf {
 						if (printEnabled)
 							System.out.println("\t\t " + Long.toHexString(name) + " " + Long.toHexString(form)); //$NON-NLS-1$ //$NON-NLS-2$
 					} while (name != 0 && form != 0);
-					abbrevs.put(new Long(code), entry);
+					abbrevs.put(Long.valueOf(code), entry);
 				}
 			}
 		}
@@ -577,7 +577,7 @@ public class Dwarf {
 		throws IOException {
 		while (in.remaining() > 0) {
 			long code = read_unsigned_leb128(in);
-			AbbreviationEntry entry = abbrevs.get(new Long(code));
+			AbbreviationEntry entry = abbrevs.get(Long.valueOf(code));
 			if (entry != null) {
 				int len = entry.attributes.size();
 				List<AttributeValue> list = new ArrayList<AttributeValue>(len);
@@ -670,7 +670,7 @@ public class Dwarf {
 			case DwarfConstants.DW_FORM_string :
 				{
 					int c;
-					StringBuffer sb = new StringBuffer();
+					StringBuilder sb = new StringBuilder();
 					while ((c = in.get()) != -1) {
 						if (c == 0) {
 							break;
@@ -695,11 +695,11 @@ public class Dwarf {
 
 					ByteBuffer data = dwarfSections.get(DWARF_DEBUG_STR);
 					if (data == null) {
-						obj = new String();
+						obj = ""; //$NON-NLS-1$
 					} else if (offset < 0 || offset > data.capacity()) {
-						obj = new String();
+						obj = ""; //$NON-NLS-1$
 					} else {
-						StringBuffer sb = new StringBuffer();
+						StringBuilder sb = new StringBuilder();
 						data.position((int) offset);
 						while (data.hasRemaining()) {
 							byte c = data.get();
@@ -723,11 +723,11 @@ public class Dwarf {
 
 			    	ByteBuffer data = dwarfAltSections.get(DWARF_DEBUG_STR);
 			    	if (data == null) {
-			    		obj = new String();
+			    		obj = ""; //$NON-NLS-1$
 			    	} else if (offset < 0 || offset > data.capacity()) {
-			    		obj = new String();
+			    		obj = ""; //$NON-NLS-1$
 			    	} else {
-			    		StringBuffer sb = new StringBuffer();
+			    		StringBuilder sb = new StringBuilder();
 			    		data.position((int) offset);
 			    		while (data.hasRemaining()) {
 			    			byte c = data.get();
@@ -768,15 +768,15 @@ public class Dwarf {
 				}
 			case DwarfConstants.DW_FORM_GNU_ref_alt :
 				if (header.offsetSize == 8)
-					obj = new Long(read_8_bytes(in));
+					obj = Long.valueOf(read_8_bytes(in));
 				else
-					obj = new Long(read_4_bytes(in)  & 0xffffffffL);
+					obj = Long.valueOf(read_4_bytes(in)  & 0xffffffffL);
 				break;
 			case DwarfConstants.DW_FORM_sec_offset :
 					if (header.offsetSize == 8)
-						obj = new Long(read_8_bytes(in));
+						obj = Long.valueOf(read_8_bytes(in));
 					else
-						obj = new Long(read_4_bytes(in)  & 0xffffffffL);
+						obj = Long.valueOf(read_4_bytes(in)  & 0xffffffffL);
 					break;
 			case DwarfConstants.DW_FORM_exprloc :
 					long size = read_unsigned_leb128(in);
@@ -789,7 +789,7 @@ public class Dwarf {
 					obj = Byte.valueOf((byte)1);
 					break;
 			case DwarfConstants.DW_FORM_ref_sig8 :
-					obj = new Long(read_8_bytes(in));
+					obj = Long.valueOf(read_8_bytes(in));
 					break;
 
 			default :
@@ -903,7 +903,7 @@ public class Dwarf {
 			default :
 				// ????
 		}
-		return new Long(value);
+		return Long.valueOf(value);
 	}
 
 	/**
@@ -914,7 +914,7 @@ public class Dwarf {
 	{
 		String str;
 		
-		StringBuffer sb = new StringBuffer();
+		StringBuilder sb = new StringBuilder();
 		while (data.hasRemaining()) {
 			byte c = data.get();
 			if (c == 0) {
