@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2012 QNX Software Systems and others.
+ * Copyright (c) 2000, 2016 QNX Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -53,7 +53,7 @@ public class DebugSymsRequestor implements IDebugEntryRequestor {
 
 	public DebugSym getEntry(long addr) {
 		DebugSym[] entries = getSortedEntries();
-		int insertion = Arrays.binarySearch(entries, new Long(addr));
+		int insertion = Arrays.binarySearch(entries, Long.valueOf(addr));
 		if (insertion >= 0) {
 			return entries[insertion];
 		}
