@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2008 IBM Corporation and others.
+ * Copyright (c) 2004, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -133,7 +133,7 @@ public class Resources {
 		Map<IFile, Long> map= new HashMap<IFile, Long>();
 		for (Iterator<IResource> iter= files.iterator(); iter.hasNext(); ) {
 			IFile file= (IFile)iter.next();
-			map.put(file, new Long(file.getModificationStamp()));
+			map.put(file, Long.valueOf(file.getModificationStamp()));
 		}
 		return map;
 	}
