@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2012 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -494,7 +494,7 @@ public abstract class ModifyDialogTabPage implements IModifyDialogTabPage {
 		public void add(Control control) {
 			control.addFocusListener(this);
 			fItemList.add(fIndex, control);
-			fItemMap.put(control, new Integer(fIndex++));
+			fItemMap.put(control, Integer.valueOf(fIndex++));
 		}
 		
 		public void add(Preference preference) {
