@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2012 Wind River Systems, Inc. and others.
+ * Copyright (c) 2008, 2016 Wind River Systems, Inc. and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -61,7 +61,7 @@ public class CSearchUnresolvedIncludesQuery extends CSearchQuery {
 
 	@Override
 	public String getResultLabel(int matchCount) {
-		String countLabel = Messages.format(CSearchMessages.CSearchResultCollector_matches, new Integer(matchCount));
+		String countLabel = Messages.format(CSearchMessages.CSearchResultCollector_matches, Integer.valueOf(matchCount));
 		return getLabel() + " " + countLabel; //$NON-NLS-1$
 	}
 }
