@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2010 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -279,7 +279,7 @@ public final class CompletionProposalComputerRegistry {
 			StringTokenizer inner= new StringTokenizer(tok.nextToken(), ":"); //$NON-NLS-1$
 			String id= inner.nextToken();
 			int rank= Integer.parseInt(inner.nextToken());
-			ordered.put(id, new Integer(rank));
+			ordered.put(id, Integer.valueOf(rank));
 		}
 		
 		List<CompletionProposalCategory> categories= new ArrayList<CompletionProposalCategory>();
