@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2009, 2012 QNX Software Systems and others.
+ *  Copyright (c) 2009, 2016 QNX Software Systems and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -248,7 +248,7 @@ public class MultiLaunchConfigurationSelectionDialog extends TitleAreaDialog imp
 			public void modifyText(ModifyEvent e) {
 				String text = ((Text)e.widget).getText();
 				try {
-					actionParam = new Integer(Integer.parseInt(text));
+					actionParam = Integer.valueOf(text);
 				}
 				catch (NumberFormatException exc) {
 					actionParam = null;
